# fintom

./: CMakeLists.txt  README.md  main.c
examples/: basic_automaton.dot  basic_automaton.json
examples/basic/: main.c
examples/binary_operations/: a.dot  a_concat_b.dot  a_concat_b.json  a_union_b.dot  a_union_b.json  b.dot
examples/symbol/: from_symbol.dot  from_symbol.json  main.c
include/: common.h  fa_error.h  fa_error_utils.h  fa_styles.h  fa_utils.h
include/fa/: fa.h  fa_debug.h  fa_operations.h
include/hash/: hash_table.h
include/io/: fa_auto_io.h
include/iterator/: iter.h
include/memory/: fa_memory.h
include/regex/: regexpr.h
include/set/: set.h
src/: common.c  fa.c  fa_debug.c  fa_error.c  fa_memory.c  fa_operations.c  fa_styles.c  fa_utils.c
src/hash/: hash_table.c
src/io/: fa_auto_io.c
src/iterator/: iter.c
src/regex/: regexpr.c
src/set/: set.c
test/: hash_test.c  set_test.c
